services/infra/k8s/activity-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activity-service
  template:
    metadata:
      labels:
        app: activity-service
    spec:
      containers:
        - name: activity-service
          image: docker.io/ogkpos/activity-service
          ports:
            - containerPort: 4007

---
apiVersion: v1
kind: Service
metadata:
  name: activity-service-srv
spec:
  selector:
    app: activity-service
  ports:
    - name: activity-service
      protocol: TCP
      port: 4007
      targetPort: 4007
