services/infra/k8s/notifications-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-service
  template:
    metadata:
      labels:
        app: notifications-service
    spec:
      containers:
        - name: notifications-service
          image: docker.io/ogkpos/notifications-service
          ports:
            - containerPort: 4006

---
apiVersion: v1
kind: Service
metadata:
  name: notifications-service-srv
spec:
  selector:
    app: notifications-service
  ports:
    - name: notifications-service
      protocol: TCP
      port: 4006
      targetPort: 4006
