services/infra/k8s/order-management-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-management-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-management
  template:
    metadata:
      labels:
        app: order-management
    spec:
      containers:
        - name: order-management
          image: docker.io/ogkpos/order-management
          ports:
            - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: order-management-srv
spec:
  selector:
    app: order-management
  ports:
    - name: order-management
      protocol: TCP
      port: 4004
      targetPort: 4004
