services/infra/k8s/review-and-feedback-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-and-feedback-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-and-feedback
  template:
    metadata:
      labels:
        app: review-and-feedback
    spec:
      containers:
        - name: review-and-feedback
          image: israel/review-and-feedback
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: review-and-feedback-srv
spec:
  selector:
    app: review-and-feedback
  ports:
    - name: review-and-feedback
      protocol: TCP
      port: 4002
      targetPort: 4002
