services/infra/k8s/service-management-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-management-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-management
  template:
    metadata:
      labels:
        app: service-management
    spec:
      containers:
        - name: service-management
          image: israel/service-management
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: service-management-srv
spec:
  selector:
    app: service-management
  ports:
    - name: service-management
      protocol: TCP
      port: 4001
      targetPort: 4001
