services/infra/k8s/user-management-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
        - name: user-management
          image: docker.io/ogkpos/user-management
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: user-management-srv
spec:
  selector:
    app: user-management
  ports:
    - name: user-management
      protocol: TCP
      port: 4000
      targetPort: 4000
