services/infra/k8s/wallet-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-service
  template:
    metadata:
      labels:
        app: wallet-service
    spec:
      containers:
        - name: wallet-service
          image: docker.io/ogkpos/wallet-service
          ports:
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: wallet-service-srv
spec:
  selector:
    app: wallet-service
  ports:
    - name: wallet-service
      protocol: TCP
      port: 4005
      targetPort: 4005
